# python-refresher

./: advanced.ipynb  beginner_python.ipynb  intermediate_python.ipynb  pyproject.toml  refresher.ipynb  test.db
beginner/: data_types.ipynb
