[project]
name = "python-refresher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "inject>=5.3.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.45",
]
